--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "ag-grid-enterprise": "^27.1.0",
     "history": "5",
+    "mobx-react-lite": "^3.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "6",
