--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "@mui/styled-engine-sc": "^5.5.2",
+    "@mui/styles": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "clsx": "^1.1.1",
     "history": "5",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
