--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "ag-grid-community": "^27.2.1",
+    "ag-grid-react": "^27.2.1",
+    "ag-grid-enterprise": "^27.2.1",
     "clsx": "^1.1.1",
     "history": "5",
     "mobx": "^6.5.0",
