--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
     "ag-grid-community": "^27.2.1",
-    "ag-grid-react": "^27.2.1",
     "ag-grid-enterprise": "^27.2.1",
+    "ag-grid-react": "^27.2.1",
+    "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "history": "5",
+    "lodash": "^4.17.21",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "react": "^18.0.0",
@@ -57,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "craco-alias": "^3.0.1",
